--- a/README.rdoc
+++ b/README.rdoc
@@ -1,22 +1,29 @@
 == README
+# Social Profile
 
-Social Profiler application has the following functionality
-Qser can enter any username. On submitting the form, it should fetch details from the following websites:-
-a) Twitter- last 10 tweets. (if available) 
-b) Github - date of joining, names of repositories (if available)
-c) RubyGems- date of joining, Names of all gems published. (if available)
+Social Profiler application has the following functionality - 
 
-* Ruby version - 2.1.2p95
-* Rails version - 4.2.0
-* Gems used -
-	Twitter
-	Gems
-	Github
+User can enter any username. On submitting the form, it should fetch details from the following websites:-
 
-* Database creation
-	development - sqlite
-	production - postgresql
+1. Twitter- last 10 tweets. (if available) 
+2. Github - date of joining, names of repositories (if available)
+3. RubyGems- date of joining, Names of all gems published. (if available)
 
-* Deployment instructions
-	deployed on heroku 
-	Run ' git push heroku master' to upload latest code and restart server
+#### Ruby version 
+2.1.2p95
+
+#### Rails version 
+4.2.0
+
+#### Gems used -
+	* Twitter
+	* Gems
+	* Github
+
+#### Database creation
+       * development - sqlite
+       * production - postgresql
+
+#### Deployment instructions
+Deployed on heroku.
+Run ' git push heroku master' to upload latest code and restart server
