--- a/README.rdoc
+++ b/README.rdoc
@@ -1,5 +1,5 @@
 == README
-# Social Profile
+= Social Profile
 
 Social Profiler application has the following functionality - 
 
@@ -9,21 +9,20 @@ User can enter any username. On submitting the form, it should fetch details fro
 2. Github - date of joining, names of repositories (if available)
 3. RubyGems- date of joining, Names of all gems published. (if available)
 
-#### Ruby version 
+== Ruby version 
 2.1.2p95
 
-#### Rails version 
+== Rails version 
 4.2.0
 
-#### Gems used -
-	* Twitter
-	* Gems
-	* Github
+== Gems used -
+* Twitter	
+* Gems
+* Github
 
-#### Database creation
+== Database creation
        * development - sqlite
        * production - postgresql
 
-#### Deployment instructions
-Deployed on heroku.
-Run ' git push heroku master' to upload latest code and restart server
+== Deployment instructions
+Deployed on heroku. Run ' git push heroku master' to upload latest code and restart server
